bug 19984 - fix 1px gap introduced for media page buttons (r=DesignerSteve)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@17497 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/purplerain/chrome/skin/colors.css
+++ b/feathers/purplerain/chrome/skin/colors.css
@@ -184,6 +184,12 @@ treecolpicker > .tree-columnpicker-icon {
   margin:0;
 }
 
+#nav-bar toolbarbutton#mediapages-button-listview,
+#nav-bar toolbarbutton#mediapages-button-filterview {
+  min-width: 23px;
+  max-width: 23px;
+}
+
 #nav-bar toolbarbutton#mediapages-button,
 #nav-bar toolbarbutton#mediapages-button .toolbarbutton-icon {
   min-width: 11px;
