--- a/feathers/purplerain/chrome/skin/images.css
+++ b/feathers/purplerain/chrome/skin/images.css
@@ -665,6 +665,8 @@ treechildren::-moz-tree-twisty(open) {
   max-height: 20px;
 }
 #mediapages-other > toolbarbutton.mp-other {
+  min-width: 23px !important;
+  max-width: 23px !important;
   min-height: 20px;
   max-height: 20px;
   background-image: url('chrome://songbird/skin/nav-bar/bg-mp-button.png');
